# vnd-apa

./: .clang-tidy  .gitignore  LICENSE  copa-apa.py  flake.nix  justfile  meson.build
instances/: .teste_5_A.txt.swp  teste10.txt  teste_10_A.txt  teste_10_B.txt  teste_5_A.txt
scripts/: copa-apa.py  run_benchmark.py
src/: Argparse.cpp  Argparse.h  ILS.cpp  ILS.h  Instance.cpp  Instance.h  LocalSearch.cpp  LocalSearch.h  Random.h  Solution.cpp  Solution.h  Util.h  main.cpp  meson.build
subprojects/: .gitignore
